[project]
name = "pyChainTool"
version = "1.3.0"
description = ""
authors = [
    {name = "Wyko ter Haar",email = "wyko.ter.haar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi (>=2025.1.31,<2026.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "pyopenssl (>=25.0.0,<26.0.0)"
]

[tool.poetry.scripts]
chaintool = "pyChainTool.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
preview = true
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "F", "D4", "PT", "PL", "C90", "Q", "SIM", "PTH", "FIX", "ERA"]
extend-select = ["I"]
ignore = ["PLR6301", "PLR2004", "PLC1901", "PLR0904", "PLR0913", "PLR0917"]
# ignore-init-module-imports = false

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.pylint.messages_control]
max-line-length = 120
disable = ["W1203", "broad-exception-caught"]

[tool.bumpversion]
current_version = "1.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true

[[tool.bumpversion.files]]
filename = ".version"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.31.1"
pytest = "^8.3.4"

